Improvements - Modified autocomplete to address issue with mobile chrome. - Removed hidden styles, they are already provided by gov stylesheets - Initially hide tab content and errors in css to stop flickering when pages load js - Fix some autocomplete issues with chrome android - Improve table details on mobile

--- a/sass/_horizontal-tabs.scss
+++ b/sass/_horizontal-tabs.scss
@@ -76,13 +76,15 @@
   .tabs-content {
     clear: both;
 
-
+    .tabs-panel {
+      // initially hide a tab panel to avoid flashes waiting for JS to load and render.
+      display: none;
+    }
 
     &[aria-hidden='true'] {
       display: none;
     }
   }
-
 
   // Tab panel inner
   .tabs-panel-inner {
@@ -91,4 +93,10 @@
       outline: 0;
     }
   }
+
+  .tabs-errors {
+    // initially hide to avoid flashes waiting for js to load and render.
+    display: none;
+  }
+
 }
