--- a/sass/govstrap.scss
+++ b/sass/govstrap.scss
@@ -18,7 +18,3 @@ $gt-big-phone: '>414px';
 @import 'status-badge';
 @import 'field-value';
 @import 'radio-hide';
-
-.hidden {
-  display: none;
-}
